add track script embluemail

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
 <!-- End of HubSpot Embed Code -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/wip-image-zoom/wip-image-zoom.min.js"></script>
+<script src="https://mmcb.b-cdn.net/uploads/tools/emblue-sdk-worker.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -176,6 +177,7 @@
     (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
     u='https://widgets-static.embluemail.com/accounts/5695F43D487B043A/scripts/sw_569.js?ts='+f();w[k]=w[k] || [];s=d.createElement(t);
     s.async=1;s.src=u;c=d.getElementsByTagName(t)[0];c.parentNode.insertBefore(s,c);})(window,document,'_swdg','script');
-    </script>
+</script>
+<script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a"></script>
 </body>
 </html>
