--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
         js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.10&appId=1346933925479827";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
-    <script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a"></script>
+    <script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a" type="text/javascript"></script>
 </head>
 <body ng-cloak>
 <!--[if	lt	IE	8]>
