change ui to select color and size

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
         a.src = g;
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-53555832-48', {'cookieDomain': 'none'});
+    ga('create', '', {'cookieDomain': 'none'});
 </script>
 </body>
 </html>
