add key for google analytics on production

--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,7 @@
         a.src = g;
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', '', {'cookieDomain': 'none'});
+    ga('create', 'UA-53555832-48', {'cookieDomain': 'none'});
 </script>
 <script>
     (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
