--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
-<script src="lib/SHA-1/sha1.js"></script>
+<script src="lib/SHA-1/dist/sha1.umd.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
 <script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
 <script src="lib/ng-file-upload/ng-file-upload.js"></script>
@@ -128,7 +128,6 @@
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/underscore/underscore.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
