--- a/app/index.html
+++ b/app/index.html
@@ -159,19 +159,13 @@
 <!-- End of HubSpot Embed Code -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/wip-image-zoom/wip-image-zoom.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-53555832-48"></script>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-53555832-48', {'cookieDomain': 'none'});
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-53555832-48');
 </script>
 <script>
     (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
