--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,9 @@
         js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.10&appId=1346933925479827";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
+    <!-- stripe -->
 </head>
 <body ng-cloak>
 <!--[if	lt	IE	8]>
@@ -118,7 +121,7 @@
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
-<script src="lib/SHA-1/dist/sha1.umd.js"></script>
+<script src="lib/SHA-1/sha1.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
 <script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
 <script src="lib/ng-file-upload/ng-file-upload.js"></script>
@@ -128,6 +131,7 @@
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/underscore/underscore.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
@@ -157,6 +161,7 @@
 <!-- End of HubSpot Embed Code -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/wip-image-zoom/wip-image-zoom.min.js"></script>
+<script src="https://mmcb.b-cdn.net/uploads/tools/angularjs-stripe-elements.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
