--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
-<script src="lib/SHA-1/sha1.js"></script>
+<script src="lib/SHA-1/dist/sha1.umd.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
 <script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
 <script src="lib/ng-file-upload/ng-file-upload.js"></script>
@@ -132,7 +132,6 @@
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/underscore/underscore.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
@@ -165,7 +164,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53555832-48"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/angularjs-stripe-elements.js"></script>
-<script>
+<!--<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -175,6 +174,6 @@
     (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
     u='https://widgets-static.embluemail.com/accounts/5695F43D487B043A/scripts/sw_569.js?ts='+f();w[k]=w[k] || [];s=d.createElement(t);
     s.async=1;s.src=u;c=d.getElementsByTagName(t)[0];c.parentNode.insertBefore(s,c);})(window,document,'_swdg','script');
-</script>
+</script>-->
 </body>
 </html>
