config for deploy

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     <meta property="product:availability" content="in stock" ng-if="post && $state.current.name !=='category'"/>
     <meta property="fb:app_id" content="1346933925479827" ng-if="post && $state.current.name !=='category'"/>
     <meta property="product:retailer_item_id" content="{{post.id}}" ng-if="post && $state.current.name !=='category'"/>
-    <meta property="og:url" content="https://www.calzalia.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="https://www.monbel.mx{{ $state.href($state.current.name) }}"/>
     
     <meta name="p:domain_verify" content="28d54fa945d5d6952e7d63800b3767bc"/>
 
@@ -162,15 +162,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/wip-image-zoom/wip-image-zoom.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-53555832-48"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53555832-48"></script> -->
 <script src="https://mmcb.b-cdn.net/uploads/tools/angularjs-stripe-elements.js"></script>
-<!--<script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-53555832-48');
+  gtag('config', 'G-S7HJ8BR1XK');
 </script>
-<script>
+<!-- <script>
     (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
     u='https://widgets-static.embluemail.com/accounts/5695F43D487B043A/scripts/sw_569.js?ts='+f();w[k]=w[k] || [];s=d.createElement(t);
     s.async=1;s.src=u;c=d.getElementsByTagName(t)[0];c.parentNode.insertBefore(s,c);})(window,document,'_swdg','script');
