--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title ng-bind="pageTitle">{{ initConfig.branchOffice }}</title>
     <meta name="description" content="{{ post.excerpt }}" ng-if="post && $state.current.name !=='category'">
-    <meta name="description" content="Venta de Calzado en Linea Para Hombre y Mujer" ng-if="!post && $state.current.name !== 'category'">
+    <meta name="description" content="Monbely - Ceramic Tiles" ng-if="!post && $state.current.name !== 'category'">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
@@ -31,11 +31,11 @@
     <meta property="og:type" content="store" ng-if="!post && $state.current.name !=='category'"/>
     <meta property="og:type" content="product" ng-if="post && $state.current.name !=='category'"/>
     <meta property="product:price:currency" content="MXN" ng-if="post && $state.current.name !=='category'"/>
-    <meta property="product:brand" content="Lady Paola" ng-if="post && $state.current.name !=='category'"/>
+    <meta property="product:brand" content="Monbelyy" ng-if="post && $state.current.name !=='category'"/>
     <meta property="product:condition" content="new" ng-if="post && $state.current.name !=='category'"/>
     <meta property="product:price:amount" content="{{ post.price }}" ng-if="post && $state.current.name !=='category'"/>
     <meta property="product:availability" content="in stock" ng-if="post && $state.current.name !=='category'"/>
-    <meta property="fb:app_id" content="1346933925479827" ng-if="post && $state.current.name !=='category'"/>
+    <!--<meta property="fb:app_id" content="1346933925479827" ng-if="post && $state.current.name !=='category'"/>-->
     <meta property="product:retailer_item_id" content="{{post.id}}" ng-if="post && $state.current.name !=='category'"/>
     <meta property="og:url" content="https://www.monbel.mx{{ $state.href($state.current.name) }}"/>
     
@@ -66,7 +66,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
-    <div id="fb-root"></div>
+    <!--<div id="fb-root"></div>
     <script>(function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
@@ -75,7 +75,7 @@
         js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.10&appId=1346933925479827";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
-    <script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a" type="text/javascript"></script>
+    <script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a" type="text/javascript"></script>-->
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     <!-- stripe -->
