--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/underscore/underscore.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
