--- a/app/index.html
+++ b/app/index.html
@@ -41,17 +41,6 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
-    <!--<div id="fb-root"></div>
-    <script>(function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.10&appId=1346933925479827";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-    <script src="https://cdn.embluemail.com/pixeltracking/pixeltracking.js?code=92c42e503f58f7314a21133df2b7bf1a" type="text/javascript"></script>-->
-    <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     <!-- stripe -->
 </head>
@@ -137,19 +126,15 @@
 <!-- End of HubSpot Embed Code -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://mmcb.b-cdn.net/uploads/tools/wip-image-zoom/wip-image-zoom.min.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53555832-48"></script> -->
 <script src="https://mmcb.b-cdn.net/uploads/tools/angularjs-stripe-elements.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-53551138-44"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-S7HJ8BR1XK');
+
+  gtag('config', 'UA-53551138-44');
 </script>
-<!-- <script>
-    (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
-    u='https://widgets-static.embluemail.com/accounts/5695F43D487B043A/scripts/sw_569.js?ts='+f();w[k]=w[k] || [];s=d.createElement(t);
-    s.async=1;s.src=u;c=d.getElementsByTagName(t)[0];c.parentNode.insertBefore(s,c);})(window,document,'_swdg','script');
-</script>-->
 </body>
 </html>
